File name changed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "cSpell.ignoreWords": [
-        "pymongo"
+        "asciutto",
+        "coperto",
+        "nuvoloso",
+        "pioggia",
+        "pymongo",
+        "sereno",
+        "soleggiato"
     ]
 }
