--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,82 @@
 {
     "cSpell.ignoreWords": [
+        "Italiano",
         "asciutto",
+        "astype",
+        "clima",
         "coperto",
+        "cumsum",
+        "dropna",
+        "fillna",
+        "getegid",
+        "geteuid",
+        "getgid",
+        "getlogin",
+        "getpid",
+        "getppid",
+        "getuid",
+        "gini",
+        "iloc",
+        "liblinear",
+        "lxml",
+        "millis",
         "newpred",
         "nuvoloso",
         "pioggia",
+        "proba",
         "pymongo",
+        "resultsarchive",
         "sereno",
-        "soleggiato"
+        "soleggiato",
+        "steptt",
+        "sysname"
     ],
     "cSpell.words": [
         "dateutil",
         "logspace",
         "relativedelta"
+    ],
+    "cSpell.enabledLanguageIds": [
+        "asciidoc",
+        "c",
+        "cpp",
+        "csharp",
+        "css",
+        "elixir",
+        "erlang",
+        "git-commit",
+        "go",
+        "graphql",
+        "handlebars",
+        "haskell",
+        "html",
+        "jade",
+        "java",
+        "javascript",
+        "javascriptreact",
+        "json",
+        "jsonc",
+        "jupyter",
+        "latex",
+        "less",
+        "markdown",
+        "php",
+        "plaintext",
+        "python",
+        "pug",
+        "restructuredtext",
+        "rust",
+        "scala",
+        "scss",
+        "scminput",
+        "swift",
+        "text",
+        "typescript",
+        "typescriptreact",
+        "vue",
+        "yaml",
+        "yml",
+        "COBOL",
+        "ACUCOBOL"
     ]
 }
